Fix logo caption alignment

--- a/style.css
+++ b/style.css
@@ -142,8 +142,8 @@ body {
   line-height: 1;
   color: var(--color-primary);
   letter-spacing: 0.16em;
-  margin-left: 14px;
-  width: 171px;
+  margin-left: 18px;
+  width: 167px;
   white-space: nowrap;
   text-align: justify;
   text-align-last: justify;
